ä½适配了移动端

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Echarts学习</title>
 </head>
 <body>
-<div id="main" style="width: 600px;height:400px;"></div>
+<div id="main" ></div>
 <button id="loadMore">加载更多</button>
 <script src="./main.js"></script>
 </body>
